--- a/css/style.css
+++ b/css/style.css
@@ -149,46 +149,46 @@ nav a{
 .prod-proteinas{
     justify-content: center;
     display: flex;
+    align-items: center;
     background-color: #24262b;
     width: 100%;
-    height: 150px;
+    height: 140px;
     box-shadow: 0px 5px 15px black;
 }
 
 .prod-proteinas p{
     color: white;
     font-size: 50px;
-    margin-top: 40px;
 }
 
 .prod-vitaminas{
     justify-content: center;
     display: flex;
+    align-items: center;
     background-color: #24262b;
     width: 100%;
-    height: 150px;
+    height: 140px;
     box-shadow: 0px 5px 15px rgb(0, 0, 0);
 }
 
 .prod-vitaminas p{
     color: white;
     font-size: 50px;
-    margin-top: 40px;
 }
 
 .prod-aminoacidos{
     justify-content: center;
     display: flex;
+    align-items: center;
     background: #24262b;
     width: 100%;
-    height: 150px;
+    height: 140px;
     box-shadow: 0px 5px 15px black;
 }
 
 .prod-aminoacidos p{
     color: white;
     font-size: 50px;
-    margin-top: 40px;
 }
 
 .lista-produtos{
@@ -221,19 +221,26 @@ nav a{
 
 .produto{
     display: grid;
-    background: #d9d9d9;
+    background: #24262b;
     padding-bottom: 15px;
     border-radius: 6px;
+    gap: 5px;
+    height: 455px;
 }
 
 #btn-compraa{
     display: flex;
-    justify-content: space-evenly;
-
+    justify-content: center;
+    margin: 10px 0 10px 0;
 }
 
 .button-compra{
+    background-color: #53ff7b;
+    border-radius: 6px;
     align-items: center;
+    height:40px;
+    width: 300px;
+    font-size: 20px;
 }
 
 .content-prod{
@@ -241,20 +248,30 @@ nav a{
 }
 
 .produto h1{
-    margin-top: 15px;
+    margin-top: 3px;
     font-size: 20px;
     display: flex;
     align-items: end;
     justify-content: center;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
+.produto p{
+    color:  white;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
 
+#alternativo{
+    font-size: 15px;
+}
 
 .img-produto{
     display: flex;
     justify-content: center;
-    background-color: #ffffffcb;
+    background-color: #ffffff;
     border-radius: 5px;
     margin: 10px 10px;
     padding: 10px 10px 10px 10px;
