--- a/css/style.css
+++ b/css/style.css
@@ -980,5 +980,9 @@ color: #000000;
 transition: all 0.4s ease;
 }
  
- 
+#destaque{
+    display:flex;
+    justify-content: center;
+    font-size: 30px;
+} 
 
